# CuteCom

./: .gitignore  .gitlab-ci.yml  .travis.yml  About.md  CMakeLists.txt  CONTRIBUTING.md  CREDITS  Changelog  CuteCom.pro  README  README.md  TODO  configure  controlpanel.cpp  controlpanel.h  controlpanel.ui  counterplugin.cpp  counterplugin.h  counterplugin.ui  ctrlcharacterspopup.cpp  ctrlcharacterspopup.h  cutecom.1  cutecom.desktop  cutecommdlg.ui  datadisplay.cpp  datadisplay.h  datahighlighter.cpp  datahighlighter.h  devicecombo.cpp  devicecombo.h  format.sh  macroplugin.cpp  macroplugin.h  macroplugin.ui  macrosettings.cpp  macrosettings.h  macrosettings.ui  main.cpp  mainwindow.cpp  mainwindow.h  (+30 more)
cutecom/: CMakeLists.txt  Changelog  README  TODO  configure  cutecom.1  cutecom.desktop  cutecom.pro  cutecommdlg.ui  main.cpp  qcppdialogimpl.cpp  qcppdialogimpl.h
distribution/: rpm-generic.spec.in
distribution/Arch/: README
distribution/Debian/: README  README.source  changelog  control  copyright  cutecom.dsc  cutecom.menu  debian.changelog  debian.control  debian.rules  watch
distribution/Debian/patches/: cutecom-remove-deprecated-desktop-entries.patch  fix_pathes_for_debian.patch  series
distribution/OpenMandriva/: README  cutecom.spec
distribution/PLD/: README  cutecom.spec
distribution/openSUSE/: cutecom.changes  cutecom.desktop  cutecom.spec
